feat(backend): remove connections route (#1940)
- remove connections route from open payments spec
- remove connections route and any associated service functions
from backend
